# smart-pointers

./: .gitignore  CMakeLists.txt  README.md
src/: unique_ptr.h
tests/: CMakeLists.txt  unique_ptr_test.cpp
